Upgrade to spring boot 4+ and spring framework 7+